--- a/helm-chart/cubee-api-server/templates/cluster-issuer.yaml
+++ b/helm-chart/cubee-api-server/templates/cluster-issuer.yaml
@@ -1,27 +1,27 @@
-apiVersion: certmanager.k8s.io/v1alpha1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-issuer
-spec:
-  acme:
-    # server: https://acme-v02.api.letsencrypt.org/directory
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
-    email: gocreating@gmail.com
+# apiVersion: certmanager.k8s.io/v1alpha1
+# kind: ClusterIssuer
+# metadata:
+#   name: letsencrypt-issuer
+# spec:
+#   acme:
+#     # server: https://acme-v02.api.letsencrypt.org/directory
+#     server: https://acme-staging-v02.api.letsencrypt.org/directory
+#     email: gocreating@gmail.com
 
-    # Name of a secret used to store the ACME account private key
-    privateKeySecretRef:
-      name: letsencrypt-private-key-secret
+#     # Name of a secret used to store the ACME account private key
+#     privateKeySecretRef:
+#       name: letsencrypt-private-key-secret
 
-    # ACME DNS-01 provider configurations
-    dns01:
+#     # ACME DNS-01 provider configurations
+#     dns01:
 
-      # Here we define a list of DNS-01 providers that can solve DNS challenges
-      providers:
-        - name: clouddns
-          clouddns:
-            # A secretKeyRef to a google cloud json service account
-            serviceAccountSecretRef:
-              name: clouddns-service-account
-              key: service-account-key.json
-            # The Google Cloud project in which to update the DNS zone
-            project: {{ .Values.googleProject.name }}
+#       # Here we define a list of DNS-01 providers that can solve DNS challenges
+#       providers:
+#         - name: clouddns
+#           clouddns:
+#             # A secretKeyRef to a google cloud json service account
+#             serviceAccountSecretRef:
+#               name: clouddns-service-account
+#               key: service-account-key.json
+#             # The Google Cloud project in which to update the DNS zone
+#             project: {{ .Values.googleProject.name }}
