--- a/helm-chart/cubee-api-server/templates/ingress.yaml
+++ b/helm-chart/cubee-api-server/templates/ingress.yaml
@@ -29,7 +29,7 @@ spec:
   #         serviceName: {{ .Values.project.name }}
   #         servicePort: 8000
 
-  - host: "*.cubee.cc"
+  - host: api.cubee.cc
     http:
       paths:
       - path: /
