--- a/helm-chart/cubee-api-server/values-prod.yaml
+++ b/helm-chart/cubee-api-server/values-prod.yaml
@@ -3,7 +3,7 @@ project:
 
 image:
   repository: gocreating/cubee-api-server
-  tag: release-${CIRCLE_SHA1}
+  tag: release-${CIRCLE_BUILD_NUM}
 
 pod:
   labels:
