--- a/helm-chart/cubee-api-server/values-stg.yaml
+++ b/helm-chart/cubee-api-server/values-stg.yaml
@@ -2,14 +2,14 @@ project:
   name: cubee-api-server
 
 image:
-  # repository: docker.io/gocreating/cubee-api-server
   repository: gocreating/cubee-api-server
+  # repository: docker.io/gocreating/cubee-api-server
   tag: ${IMAGE_TAG}
 
 pod:
   labels:
-    env: "prod"
-    cluster: "cubee-prod"
+    env: "stg"
+    cluster: "cubee-stg"
 
 healthz:
   path: /
