--- a/helm-chart/cubee-api-server/values-stg.yaml
+++ b/helm-chart/cubee-api-server/values-stg.yaml
@@ -3,7 +3,6 @@ project:
 
 image:
   repository: gocreating/cubee-api-server
-  # repository: docker.io/gocreating/cubee-api-server
   tag: ${IMAGE_TAG}
 
 pod:
@@ -23,3 +22,31 @@ autoScaling:
   minReplicas: 1
   maxReplicas: 3
   targetCPUUtilizationPercentage: 80
+
+ingress:
+  rules:
+    # can redirect cubee.cc, mutate with next rule
+    - host: stg.cubee.cc
+      http:
+        paths:
+        - path: /
+          backend:
+            serviceName: cubee-api-server
+            servicePort: 8000
+
+    # can redirect <any-sub-domain>.cubee.cc, mutate with previous rule
+    # - host: www.cubee.cc
+    #   http:
+    #     paths:
+    #     - path: /*
+    #       backend:
+    #         serviceName: cubee-api-server
+    #         servicePort: 8000
+
+    - host: api.stg.cubee.cc
+      http:
+        paths:
+        - path: /
+          backend:
+            serviceName: cubee-api-server
+            servicePort: 8000
