--- a/helm-chart/cubee-api-server/templates/deployment.yaml
+++ b/helm-chart/cubee-api-server/templates/deployment.yaml
@@ -51,4 +51,4 @@ spec:
       volumes:
       - name: config-volume
         configMap:
-          name: credential-config
+          name: credential-config-{{ .Values.project.name }}
