--- a/config-stg.tpl.yaml
+++ b/config-stg.tpl.yaml
@@ -1,3 +1,4 @@
-SERVER_NAME: example.com
+SERVER_NAME: stg.example.com
 SQLALCHEMY_DATABASE_URI: postgresql://user:pass@host:port/db
 JWT_SECRET_KEY: my-jwt-secret-key
+JWT_COOKIE_DOMAIN: .stg.example.com
