--- a/config-test.yaml
+++ b/config-test.yaml
@@ -1,3 +1,4 @@
 SERVER_NAME: localhost
 SQLALCHEMY_DATABASE_URI: postgresql://user:pass@db:5432/api_server_test
 JWT_SECRET_KEY: SoMEseCrEt
+JWT_COOKIE_DOMAIN:
